!5 修复图标拉伸的问题 * fix icon stretching * Merge branch 'master' of https://gitee.com/milkpotatoes/stars into sea… * Add command for searchbar * add support for search links

--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,7 @@ html,
     align-items: center;
     -webkit-user-select: none;
     user-select: none;
+    object-fit: contain;
 }
 
 .shortcut .banner {
